<resources>
    <string name="app_name">Stomazon</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment_details">Payment Details</string>
    <string name="price">Price</string>
    <string name="price_value">00</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="welcome_to_login">Welcome to login!</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="please_wait">Please wait</string>
    <string name="welcome_to_stomazon">Welcome to StoMaZon</string>
    <string name="your_one_stop_online_shopping_solution">Your one-stop online shopping solution.</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including_versions_of_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="description_product">Description product</string>
    <string name="quantity_value">0</string>
    <string name="quantity">Quantity:</string>
    <string name="zero_value">0</string>
    <string name="title_product">Title Product</string>
    <string name="type_categgory">Type Categgory</string>
    <string name="category">Category:</string>
    <string name="rp">Rp</string>
    <string name="product_detail">Product Detail</string>
    <string name="order_completed">Order Completed</string>
    <string name="order_id">Order ID:</string>
    <string name="order_id_value">Order ID</string>
    <string name="payment_status">Payment Status:</string>
    <string name="paid_unpaid_value">Paid/Unpaid:</string>
    <string name="date_transaction">Date Transaction:</string>
    <string name="date_value">DDMMYYYY</string>
    <string name="total_price">Total Price:</string>
    <string name="loading">Loading</string>
    <string name="search_product_name">Search Product Name</string>
    <string name="hello">Hello,</string>
    <string name="user">User</string>
    <string name="category_without_colon">Category</string>
    <string name="clothes">Clothes</string>
    <string name="electronics">Electronics</string>
    <string name="furniture">Furniture</string>
    <string name="shoes">Shoes</string>
    <string name="misc">Misc</string>
    <string name="list_products">List Products</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="please_choose_a_product_and_happy_shopping">Please choose a product and happy shopping</string>
    <string name="checkout">Checkout</string>
    <string name="my_profile">My Profile</string>
    <string name="name_user">Name User</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="logout">Logout</string>
    <string name="my_transaction">My Transaction</string>
    <string name="empty_order">Empty Order</string>
    <string name="please_add_the_product_to_the_basket_and_create_an_order">Please add the product to the basket and create an order</string>
    <string name="name_product">Name Product</string>
    <string name="id_order">ID Order</string>
    <string name="product_order">Product Order</string>
    <string name="total_price_without_colon">Total price</string>
    <string name="status_value">Status</string>
    <string name="product_search_not_found">product_search_not_found</string>
    <string name="add_to_cart">Add to cart</string>
</resources>