<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.activity.TransactionOrderDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_transaction_sorder_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_transaction_sorder_detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="0dp">

            <TextView
                android:id="@+id/tv_status_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/order_completed"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_order_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/order_id"
                android:textColor="@color/grey_font_text"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/tv_order_id_detail"
                app:layout_constraintStart_toStartOf="@id/tv_status_order"
                app:layout_constraintTop_toBottomOf="@id/tv_status_order" />

            <TextView
                android:id="@+id/tv_order_id_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textAlignment="viewEnd"
                android:textColor="@color/grey_font_text"
                android:textSize="14sp"
                android:tooltipText="@string/order_id_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_order_name"
                app:layout_constraintTop_toTopOf="@id/tv_order_name" />

            <TextView
                android:id="@+id/tv_payment_status_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/payment_status"
                android:textColor="@color/grey_font_text"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/tv_date_transaction_detail"
                app:layout_constraintEnd_toStartOf="@id/tv_payment_status"
                app:layout_constraintStart_toStartOf="@id/tv_status_order"
                app:layout_constraintTop_toBottomOf="@id/tv_order_name" />

            <TextView
                android:id="@+id/tv_payment_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textAlignment="viewEnd"
                android:textColor="@color/grey_font_text"
                android:textSize="14sp"
                android:tooltipText="@string/paid_unpaid_value"
                app:layout_constraintBottom_toBottomOf="@id/tv_payment_status_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_payment_status_detail"
                app:layout_constraintTop_toTopOf="@id/tv_payment_status_detail" />

            <TextView
                android:id="@+id/tv_date_transaction_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date_transaction"
                android:textColor="@color/grey_font_text"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@id/tv_payment_status_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_payment_status_detail"
                app:layout_constraintBottom_toTopOf="@id/divider_3"/>

            <TextView
                android:id="@+id/tv_date_transactiion_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tooltipText="@string/date_value"
                android:textColor="@color/grey_font_text"
                android:textSize="14sp"
                android:textAlignment="viewEnd"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@id/tv_date_transaction_detail"
                app:layout_constraintBottom_toBottomOf="@id/tv_date_transaction_detail"
                app:layout_constraintStart_toEndOf="@id/tv_date_transaction_detail"
                app:layout_constraintEnd_toEndOf="parent"/>


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="8dp"
                app:dividerColor="@color/grey_stroke"
                app:layout_constraintBottom_toTopOf="@id/tv_product_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date_transaction_detail" />

            <TextView
                android:id="@+id/tv_product_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/product_detail"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/rv_product_ordered"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_product_ordered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_detail"
                tools:listitem="@layout/list_item_product_transaction_order" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@id/divider_4"
                app:layout_constraintTop_toBottomOf="@id/tv_product_detail">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include layout="@layout/list_item_product_transaction_order_shimmer" />

                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="8dp"
                app:dividerColor="@color/grey_stroke"
                app:layout_constraintBottom_toTopOf="@id/tv_payment_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_product_ordered" />

            <TextView
                android:id="@+id/tv_payment_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/payment_details"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_4" />

            <TextView
                android:id="@+id/tv_total_price_order_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/total_price"
                android:textColor="@color/grey_font_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/tv_total_price_order_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_payment_details" />

            <TextView
                android:id="@+id/tv_total_price_order_number"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="viewEnd"
                android:textColor="@color/grey_font_text"
                android:textSize="14sp"
                android:textStyle="bold"
                android:tooltipText="@string/price_value"
                app:layout_constraintBottom_toBottomOf="@id/tv_total_price_order_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_total_price_order_detail"
                app:layout_constraintTop_toTopOf="@id/tv_total_price_order_detail" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>