<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_product"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_title_product"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
            app:strokeColor="@color/grey_stroke1"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/tv_title_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_product"
            android:textColor="@color/grey_font_text"
            android:textSize="16sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/iv_product"
            app:layout_constraintTop_toTopOf="@id/iv_product"
            app:layout_constraintBottom_toTopOf="@id/tv_price"
            app:layout_constraintEnd_toEndOf="parent" />



        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/price_value"
            android:textColor="@color/oil_black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_product"
            app:layout_constraintStart_toEndOf="@id/iv_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_quantity_transaction_detail"/>

        <TextView
            android:id="@+id/tv_quantity_transaction_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_marginEnd="2dp"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            app:layout_constraintBottom_toBottomOf="@id/iv_product"
            app:layout_constraintStart_toStartOf="@id/tv_price"
            app:layout_constraintEnd_toStartOf="@id/tv_quantity_transaction_detail_number"/>

        <TextView
            android:id="@+id/tv_quantity_transaction_detail_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zero_value"
            app:layout_constraintTop_toTopOf="@id/tv_quantity_transaction_detail"
            app:layout_constraintBottom_toBottomOf="@id/tv_quantity_transaction_detail"
            app:layout_constraintStart_toEndOf="@id/tv_quantity_transaction_detail"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
