<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_id_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/id_order"
            android:textSize="14sp"
            android:textColor="@color/oil_black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/card_status"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/iv_shopping_bag"/>

        <ImageView
            android:id="@+id/iv_shopping_bag"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_shopping_bag_24"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_id_order"
            app:layout_constraintBottom_toBottomOf="@id/tv_date"/>

        <TextView
            android:id="@+id/tv_name_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/product_order"
            android:textSize="14sp"
            android:textColor="@color/oil_black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/iv_shopping_bag"
            app:layout_constraintBottom_toTopOf="@id/tv_date"
            app:layout_constraintStart_toEndOf="@id/iv_shopping_bag"
            app:layout_constraintEnd_toStartOf="@id/card_status"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date_value"
            android:textSize="12sp"
            android:textColor="@color/grey_font_text"
            app:layout_constraintStart_toStartOf="@id/tv_name_order"
            app:layout_constraintEnd_toStartOf="@id/card_status"
            app:layout_constraintTop_toBottomOf="@id/tv_name_order"
            app:layout_constraintBottom_toTopOf="@id/divider_2"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/tertinary_green"
            app:cardCornerRadius="4dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintStart_toEndOf="@id/tv_name_order"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/divider_2"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp">

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_value"
                    android:textSize="12sp"
                    android:textColor="@color/green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            app:dividerColor="@color/grey_stroke"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_total_price_transaction" />

        <TextView
            android:id="@+id/tv_total_price_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textStyle="bold"
            android:textColor="@color/grey_font_text"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/divider_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_number_total_price_transaction"/>

        <TextView
            android:id="@+id/tv_number_total_price_transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/price_value"
            android:textStyle="bold"
            android:textColor="@color/main_color"
            android:textSize="16sp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/tv_total_price_transaction"
            app:layout_constraintBottom_toBottomOf="@id/tv_total_price_transaction"
            app:layout_constraintStart_toEndOf="@id/tv_total_price_transaction"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
